# for-university

./: README.md  lab 1  lab 2  lab 3  lab 4  lab 5  lab 6  lab 6.cpp  lab 7.cpp  lab 8.cpp  lab2.2  python_trash.py  test.cpp
python_is_trash/: lab 1.py  lab2.py  lab7.py  lab8.py
python_is_trash/graph/: main.py
python_is_trash/graph/графики/: шпаргалка.docx
python_is_trash/graph/интерполяция/: lab2_data.csv  Дополнительные данные.xls  Описание практическая 2 .docx  ссылка на пример.txt
python_is_trash/lab 10/: data.csv  main.py
python_is_trash/lab2/: main.py
python_is_trash/lab3/: csv_20260206_08a514.txt  main.py  tsv_20260206_ecdd0d.txt  Задание.docx
sem1/: lab 2.2.cpp
sem2/: lab 1.cpp
sem2/lab 2/: Product.cpp  Product.hpp  main.cpp
sem2/lab 3/app/: Product.cpp  Product.hpp  main.cpp
sem2/lab 3/lib/: Commission.cpp  Commission.hpp  Ingredient.cpp  Ingredient.hpp
sem2/lab 4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
sem2/lab 5/: CMakeLists.txt  CardDialog.cpp  CardDialog.h  MainWindow.ui  Person.cpp  Person.h
sem2/lab 5.2/: CMakeLists.txt  CardDialog.cpp  CardDialog.h  CardDialogMag.ui  CardDialogVrag.ui  MainWindow.cpp  MainWindow.h  Person.cpp  Person.h
sem2/lab 5/resources/: data.txt  images.qrc
sem2/lab str/: main.cpp  task2.cpp  task2.hpp  text.txt
